--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,8 @@ jobs:
           - splitreus62_right
           - tg4x
           - tidbit
+          - helix_left
+          - helix_right
         include:
           - board: dz60rgb_rev1
           - board: nrf52840_m2
