--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
           - kyria_right
           - lily58_left
           - lily58_right
+          - helix_left
+          - helix_right
           - romac
           - settings_reset
         include:
@@ -44,27 +46,27 @@ jobs:
             2-${{ runner.os }}-build-
             2-${{ runner.os }}-
       - name: West Init
-        uses: "docker://zmkfirmware/zephyr-west-action-arm:latest"
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
         id: west-init
         with:
           args: 'init "-l app"'
       - name: West Update
-        uses: "docker://zmkfirmware/zephyr-west-action-arm:latest"
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
         id: west-update
         with:
-          args: "update"
+          args: 'update'
       - name: West Config Zephyr Base
-        uses: "docker://zmkfirmware/zephyr-west-action-arm:latest"
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
         id: west-config
         with:
           args: 'config "--global zephyr.base-prefer configfile"'
       - name: West Zephyr Export
-        uses: "docker://zmkfirmware/zephyr-west-action-arm:latest"
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
         id: west-zephyr-export
         with:
-          args: "zephyr-export"
+          args: 'zephyr-export'
       - name: West Build
-        uses: "docker://zmkfirmware/zephyr-west-action-arm:latest"
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
         id: west-build
         with:
           args: 'build "-s app -b ${{ matrix.board }} -- -DSHIELD=${{ matrix.shield }}"'
@@ -72,5 +74,5 @@ jobs:
         uses: actions/upload-artifact@v2
         if: ${{ matrix.board == 'nice_nano' }}
         with:
-          name: "${{ matrix.board }}-${{ matrix.shield }}-zmk-uf2"
+          name: '${{ matrix.board }}-${{ matrix.shield }}-zmk-uf2'
           path: build/zephyr/zmk.uf2
