--- a/app/boards/shields/helix/helix_left.conf
+++ b/app/boards/shields/helix/helix_left.conf
@@ -1,6 +1,8 @@
 CONFIG_ZMK_SPLIT=y
 CONFIG_ZMK_SPLIT_BLE_ROLE_CENTRAL=y
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
+
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
